Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-57772

live-lock as DCP clients can cause unbounded memory growth (growth in DCPBackfillManager queues) - was [System Test] : KV node hard failover + rebalance out hangs

    XMLWordPrintable

Details

    • Untriaged
    • Centos 64-bit
    • 0
    • No

    Description

      Script to Repro

      ./sequoia -client 172.23.104.27:2375 -provider file:centos_pine.yml -test tests/integration/7.2/test_7.2.yml -scope tests/integration/7.2/scope_7.2_magma.yml -scale 3 -repeat 0 -log_level 0 -version 7.2.1-5829 -skip_setup=false -skip_test=false -skip_teardown=true -skip_cleanup=false -continue=false -collect_on_error=false -stop_on_error=false -duration=604800 -show_topology=true
      

      Longevity test has been running for past 5 days and its hung since almost 3 days during the following step.

      [2023-07-07T06:17:04-07:00, sequoiatools/couchbase-cli:7.1:98bd27] failover -c 172.23.108.103:8091 --server-failover 172.23.97.239:8091 -u Administrator -p password --hard
      [2023-07-07T06:17:15-07:00, sequoiatools/couchbase-cli:7.1:527332] rebalance -c 172.23.108.103:8091 -u Administrator -p password
      

      We have just started running 7.2.1 longevity. So, we don't have a baseline yet. cbcollect_info attached.

      Attachments

        Activity

          People

            Balakumaran.Gopal Balakumaran Gopal
            Balakumaran.Gopal Balakumaran Gopal
            Votes:
            0 Vote for this issue
            Watchers:
            9 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              PagerDuty