engines/ep/src/dcp/backfill.h
@@ -50,6 +50,11 @@ struct DCPBackfillIface {
      * @returns true if the backfill task should be cancelled
      */
     virtual bool shouldCancel() const = 0;
+
+    /**
+     * Get the u64 value which uniquely identifies this object
+     */
+    virtual uint64_t getUID() const = 0;
 };
 
 /**
@@ -82,6 +87,10 @@ public:
      */
     bool shouldCancel() const override;
 
+    uint64_t getUID() const override {
+        return uid;
+    }
+
 protected:
     /**
      * Ptr to the associated Active DCP stream. Backfill can be run for only
@@ -100,6 +109,8 @@ protected:
 
     /// Cumulative runtime of this backfill.
     std::chrono::steady_clock::duration runtime{0};
+
+    const uint64_t uid{0};
 };
 
 /**
